@@ -30,6 +30,7 @@ enum file_type_e {
   FILE_TYPE_COREPICTURE,
   FILE_TYPE_DIRAC,
   FILE_TYPE_DTS,
+  FILE_TYPE_DV,
   FILE_TYPE_FLAC,
   FILE_TYPE_FLV,
   FILE_TYPE_HDSUB,
